--- a/style.css
+++ b/style.css
@@ -1,9 +1,43 @@
 @charset "UTF-8";
 
+*{
+    margin: 0px;
+    padding: 0px;
+}
+html, body{
+    width: 100vw;
+    height: 100vh;
+}
 body{
+    
     background-image: url('imagens/fundo-madeira.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+}
+main{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    
+}
+
+section#tela{
+    position: absolute;
+    top: 50;
+    left: 50;
+    
+    background-color: blue;
+    width: 300px;
+    height: 600px;
+    
+}
+section.sociais{
+    text-align: right;
+}
+section.sociais img{
+    width: 50px;
+    margin: 1em;
+    border-radius: 50px;
 }
