--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 html, body{
     width: 100vw;
@@ -25,19 +26,45 @@ main{
 
 section#tela{
     position: absolute;
-    top: 50;
-    left: 50;
-    
-    background-color: blue;
-    width: 300px;
-    height: 600px;
-    
-}
-section.sociais{
-    text-align: right;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: url('imagens/frame-iphone.png') center center no-repeat;
+    background-size: cover;
+    width: 311px;
+    height: 627px;   
 }
 section.sociais img{
     width: 50px;
     margin: 1em;
-    border-radius: 50px;
+    
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px black;
+    box-sizing: border-box;
+}
+section.sociais img:hover{
+    border: 1px solid rgba(255, 255, 255, 0.653);
+    transform: translate(-4px, -4px);
+    box-shadow: 5px 5px 5px black;
+    transition-duration: 0.5s;
+
+}
+section.sociais{
+   text-align: right;
+   
+}
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 470px;
+}
+@media screen and (max-width: 600px){
+    section.sociais{
+        display: flex;
+        justify-content: center;
+        padding-top: 1em;
+    }
+   
 }
